@@ -17,7 +17,7 @@ my $string   = $lang->maketext('Please click [_1]here[_2] to start.',
 <& /widgets/wrappers/table_bottom.mc &>
 <& /widgets/wrappers/footer.mc &>
 <%init>;
-my $url = SSL_ENABLE ? 'https://' . $r->hostname
-    . (SSL_PORT == 443 ? '' : ':' . SSL_PORT) . $ARGS{referer}
+my $url = SSL_ENABLE
+    ? Bric::Util::ApacheReq->url( ssl => 1, uri => $ARGS{referer} )
     : $ARGS{referer};
 </%init>
