@@ -145,8 +145,10 @@ if ($useSideNav) {
         </div>
 % }
 % if (!$popup && defined get_user_id()) {
+%     my $prefix = SSL_ENABLE && get_state_name('login') ne 'ssl'
+%         ? Bric::Util::ApacheReq->url( ssl => 1, uri => '' ) : '';
         <div class="userinfo">
-            Logged in as <a href="/admin/profile/user/<% get_user_id %>" title="<% $lang->maketext("User Profile") %>"><strong><% get_user_object->format_name %></strong></a>
+            Logged in as <a href="<% $prefix %>/admin/profile/user/<% get_user_id %>" title="<% $lang->maketext("User Profile") %>"><strong><% get_user_object->format_name %></strong></a>
         </div>
 % }
     </div>
